--- a/manifest.json
+++ b/manifest.json
@@ -6,9 +6,10 @@
     "backtround": {
         "service_worker": "background.js"
       }
-    "content_scripts":[
+    "content_scripts": [
       {
-        "matches":["<all_urls"],
+        "matches": ["<all_urls>"],
+        "js": ["content.js"]
       }
     ],
     "action": {
